# QoreDB

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GDPR_AUDIT.md  LICENSE  LICENSE-BSL  PLAN.md  README.md  SECURITY.md  SECURITY_AUDIT.md  biome.json  cliff.toml  docker-compose.server.yml  docker-compose.yml  eslint.config.js  package.json  plugin.schema.json  pnpm-lock.yaml  pnpm-workspace.yaml  stress-tests-pgsql.md  vite.config.ts
plugins-dev/cli/: Cargo.toml
plugins-dev/cli/src/: main.rs
plugins-dev/examples/danger-guard/: Cargo.toml
plugins-dev/examples/danger-guard/src/: lib.rs
plugins-dev/examples/slow-query-toast/: Cargo.toml
plugins-dev/examples/slow-query-toast/src/: lib.rs
plugins-dev/examples/sql-linter/: Cargo.toml  plugin.json
plugins-dev/examples/sql-linter/src/: lib.rs
plugins-src/slow-query-toast/: Cargo.toml
plugins-src/slow-query-toast/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/qore-cli/: Cargo.toml  README.md
src-tauri/crates/qore-cli/src/: main.rs
src-tauri/crates/qore-core/: Cargo.toml
src-tauri/crates/qore-core/src/: error.rs  lib.rs  registry.rs  traits.rs  types.rs
src-tauri/crates/qore-drivers/: Cargo.toml
src-tauri/crates/qore-drivers/src/: clickhouse_safety.rs  fulltext_strategy.rs  lib.rs  mongo_pipeline.rs  mongo_safety.rs  proxy.rs  query_manager.rs  redis_safety.rs  schema_export.rs  session_manager.rs  ssh_tunnel.rs
src-tauri/crates/qore-drivers/src/drivers/: cockroachdb.rs  duckdb.rs  elasticsearch.rs  mariadb.rs  mod.rs  mongodb.rs  mysql.rs  neon.rs  opensearch.rs  pg_compat.rs  postgres.rs  postgres_utils.rs  redis.rs  search_compat.rs  sqlite.rs  sqlite_functions.rs  sqlserver.rs  (+2 more)
src-tauri/crates/qore-mcp/: Cargo.toml  README.md
src-tauri/crates/qore-mcp/src/: main.rs
src-tauri/crates/qore-pgo-workload/: Cargo.toml
src-tauri/crates/qore-pgo-workload/benches/: json_parse.rs
src-tauri/crates/qore-pgo-workload/src/: main.rs
src-tauri/crates/qore-query/: Cargo.toml
src-tauri/crates/qore-query/src/: built.rs  dialect.rs  error.rs  ident.rs  lib.rs  prelude.rs  sql_type.rs
src-tauri/crates/qore-query/tests/: aggregates_and_grouping.rs  hardening.rs  joins_and_ordering.rs  properties.rs  select_compile.rs  subqueries_and_functions.rs  text_and_combinators.rs
src-tauri/crates/qore-server/: Cargo.toml  README.md
src-tauri/crates/qore-server/src/: auth.rs  config.rs  error.rs  main.rs  session.rs  state.rs
src-tauri/crates/qore-service/: Cargo.toml  build.rs
src-tauri/crates/qore-service/examples/: headless.rs
src-tauri/crates/qore-service/src/: connection.rs  context.rs  error.rs  governance.rs  lib.rs  mutation.rs  paths.rs  query.rs  ratelimit.rs  sensitive.rs
src-tauri/crates/qore-sql/: Cargo.toml
src-tauri/crates/qore-sql/src/: clickhouse_safety.rs  connection_url.rs  generator.rs  lib.rs  safety.rs
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_write.rs  lib.rs  main.rs  metrics.rs  observability.rs  paths.rs  policy.rs  redaction.rs
src-tauri/src/ai/: context.rs  manager.rs  mod.rs  provider.rs  safety.rs  types.rs
src-tauri/src/api/: auth.rs  endpoints.rs  handlers.rs  mod.rs  openapi.rs  rate_limit.rs  server.rs  tls.rs  types.rs
src-tauri/src/backup/: args.rs  duckdb_native.rs  mod.rs  runner.rs  tools.rs
src-tauri/src/cache/: mod.rs  store.rs
src-tauri/src/commands/: ai.rs  backup.rs  cache.rs  confirmation.rs  connection.rs  connection_url.rs  contracts.rs  data_generator.rs  database_export.rs  driver.rs  export.rs  federation.rs  fulltext_search.rs  governance.rs  import.rs  instant_api.rs  interceptor.rs  license.rs  logs.rs  maintenance.rs  metrics.rs  mod.rs  mutation.rs  plugins.rs  policy.rs  query.rs  routines.rs  sandbox.rs  schema_export.rs  sequences.rs  share.rs  snapshots.rs  stream_msg.rs  time_travel.rs  triggers.rs  vault.rs  virtual_relations.rs  workspace.rs  workspace_queries.rs
src-tauri/src/contracts/: alert.rs  events.rs  mod.rs  parser.rs  runner.rs  storage.rs
src-tauri/src/contracts/sql/: cardinality.rs  custom.rs  dialect.rs  domain.rs  format.rs  literal.rs  mod.rs  presence.rs  referential.rs  uniqueness.rs
src-tauri/src/engine/: connection_url.rs  error.rs  fulltext_strategy.rs  mod.rs  mongo_safety.rs  proxy.rs  query_manager.rs  redis_safety.rs  registry.rs  schema_export.rs  session_manager.rs  sql_generator.rs  sql_safety.rs  ssh_tunnel.rs  traits.rs  types.rs
src-tauri/src/engine/drivers/: cockroachdb.rs  duckdb.rs  mariadb.rs  mod.rs  mongodb.rs  mysql.rs  pg_compat.rs  postgres.rs  postgres_utils.rs  redis.rs  sqlite.rs  sqlserver.rs
src-tauri/src/engine/types/: collection_list.rs
src-tauri/src/export/: mod.rs  pipeline.rs  types.rs
src-tauri/src/export/writers/: counting.rs  csv.rs  html.rs  json.rs  mod.rs  parquet_writer.rs  sql.rs  xlsx.rs
src-tauri/src/federation/: duckdb_engine.rs  manager.rs  mod.rs  parser.rs  planner.rs  types.rs
src-tauri/src/interceptor/: audit.rs  mod.rs  pipeline.rs  profiling.rs  redaction.rs  safety.rs  types.rs
src-tauri/src/license/: key.rs  mod.rs  status.rs
src-tauri/src/observability/: sensitive.rs
src-tauri/src/plugins/: manifest.rs  marketplace.rs  mod.rs  registry.rs
src-tauri/src/plugins/runtime/: capabilities.rs  host_fns.rs  manager.rs  mod.rs  secrets.rs  storage.rs  wasmi_host.rs
src-tauri/src/share/: manager.rs  mod.rs  types.rs
src-tauri/src/snapshots/: mod.rs  store.rs  types.rs
src-tauri/src/time_travel/: capture.rs  mod.rs  rollback.rs  store.rs  types.rs
src-tauri/src/vault/: backend.rs  credentials.rs  lock.rs  mod.rs  storage.rs
src-tauri/src/virtual_relations/: mod.rs  store.rs  types.rs
src-tauri/src/workspace/: connection_store.rs  discovery.rs  manager.rs  mod.rs  types.rs  watcher.rs  write_registry.rs
src-tauri/tests/: app_integration.rs  integration_databases.rs  plugins_e2e.rs
(+656 files in other folders)
