[package]
name = "qoredb"
version = "0.1.18"
description = "Next gen DB Client"
authors = ["Raphaël Plassart <raphael.plassart@gmail.com>"]
edition = "2021"

[lib]
name = "qoredb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "sqlite", "chrono", "rust_decimal", "bigdecimal", "uuid"] }
rust_decimal = { version = "1", features = ["serde"] }
bigdecimal = "0.4"
mongodb = "3"
redis = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }
chrono = { version = "0.4", features = ["serde"] }

# Utilities
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
futures = "0.3"
sqlparser = "0.60"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = "1"
dirs = "5"
url = "2"
percent-encoding = "2"

# Note: SSH tunneling uses native OpenSSH command (ssh -L), no external crate needed

# Security - credential storage
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
argon2 = "0.5"
rand = "0.8"

# License verification
ed25519-dalek = { version = "2", features = ["serde"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

# Pro-only export formats
rust_xlsxwriter = { version = "0.93", optional = true }
arrow = { version = "54", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = ["arrow"] }

# Pro-only AI BYOK
reqwest = { version = "0.12", features = ["json", "stream"], optional = true }

# Feature flags for Open Core tiers
# Core (default): no flags needed
# Pro: cargo build --features pro
# Team: cargo build --features team (includes pro)
# Enterprise: cargo build --features enterprise (includes team + pro)
[features]
default = []
pro = ["rust_xlsxwriter", "parquet", "arrow", "reqwest"]
team = ["pro"]
enterprise = ["team"]

[dev-dependencies]
tempfile = "3.24.0"
