# ============================================================================
# Cargo Workspace — QoreDB
# ============================================================================
# This file serves as both the workspace root AND the Tauri app package.
# Sub-crates live in crates/ and share dependencies via [workspace.dependencies].
# ============================================================================

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
compact_str = { version = "0.8", features = ["serde"] }

tokio = { version = "1", features = [
    "rt-multi-thread",
    "sync",
    "time",
    "net",
    "fs",
    "io-util",
    "macros",
] }
async-trait = "0.1"

thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"

sqlparser = "0.60"
url = "2"
percent-encoding = "2"

tracing = "0.1"

rust_decimal = { version = "1", features = ["serde"] }
bigdecimal = "0.4"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "mysql",
    "sqlite",
    "chrono",
    "rust_decimal",
    "bigdecimal",
    "uuid",
] }
mongodb = "3"
redis = { version = "0.27", features = [
    "tokio-comp",
    "aio",
    "connection-manager",
] }
tiberius = { version = "0.12", features = [
    "tds73",
    "chrono",
    "rust_decimal",
    "bigdecimal",
    "winauth",
    "integrated-auth-gssapi",
] }
bb8 = "0.9"
bb8-tiberius = "0.16"
duckdb = { version = "1.4", features = ["bundled"] }

[package]
name = "qoredb"
version = "0.1.30"
description = "Next gen DB Client"
authors = ["Raphaël Plassart <raphael.plassart@gmail.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "qoredb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15"

[dependencies]
qore-core = { path = "crates/qore-core" }
qore-sql = { path = "crates/qore-sql" }
qore-drivers = { path = "crates/qore-drivers", features = ["tauri"] }
qore-service = { path = "crates/qore-service" }

tauri = { version = "2", features = ["image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1"

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["compat"] }
bytes = "1.11.1"

mimalloc = { version = "0.1", default-features = false }

sqlx = { workspace = true }
rust_decimal = { workspace = true }
bigdecimal = { workspace = true }
mongodb = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true }

async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
futures = "0.3"
sqlparser = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
csv = "1"
regex = "1"
parking_lot = "0.12"
dirs = "5"
url = { workspace = true }
percent-encoding = { workspace = true }

notify = { version = "6", default-features = false, features = [
    "macos_fsevent",
] }

tokio-socks = "0.5"

keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

which = "6"

ed25519-dalek = { version = "2", features = ["serde"] }
wasmi = { version = "1.0.9", default-features = false, features = ["std"] }

zip = { version = "2", default-features = false, features = ["deflate"] }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

rust_xlsxwriter = { version = "0.93", optional = true }
arrow = { version = "54", optional = true }
parquet = { version = "54", optional = true, default-features = false, features = [
    "arrow",
] }

serde_yml = { version = "0.0.12", optional = true }

axum = { version = "0.7", optional = true }
axum-server = { version = "0.7", optional = true, features = ["tls-rustls"] }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["cors", "trace"] }
rcgen = { version = "0.13", optional = true, default-features = false, features = [
    "aws_lc_rs",
    "pem",
] }
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "aws_lc_rs",
] }

reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "multipart",
    "blocking",
] }

tiberius = { workspace = true }
bb8 = { workspace = true }
bb8-tiberius = { workspace = true }

duckdb = { workspace = true }

[features]
default = []
pro = [
    "rust_xlsxwriter",
    "parquet",
    "arrow",
    "serde_yml",
    "axum",
    "axum-server",
    "tower",
    "tower-http",
    "rcgen",
    "rustls",
]
team = ["pro"]
enterprise = ["team"]

[profile.dev.package."*"]
opt-level = 1

[profile.dev]
opt-level = 0
debug = 2
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
codegen-units = 1

[dev-dependencies]
tempfile = "3.24.0"
wat = "1.0"
