[package]
name = "qoredb-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Scaffold, build and install QoreDB executable plugins."

[[bin]]
name = "qoredb-plugin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "5"
toml_edit = "0.22"

[profile.release]
strip = true
lto = true
