[package]
name = "qoredb-slow-query-toast"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Surfaces a toast when a query takes longer than a configurable threshold."

[lib]
crate-type = ["cdylib"]

[dependencies]
qoredb-plugin-sdk = { path = "../../sdk" }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
