[package]
name = "qoredb-sql-linter"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Example QoreDB plugin: blocks UPDATE/DELETE without a WHERE clause."

[lib]
crate-type = ["cdylib"]

[dependencies]
qoredb-plugin-sdk = { path = "../../sdk" }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
