[package]
name = "qore-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Universal database engine abstraction — types, traits, and error handling"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
regex = "1"
