[package]
name = "qore-server"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

[[bin]]
name = "qore-server"
path = "src/main.rs"

[dependencies]
qore-service = { path = "../qore-service" }
qore-core = { path = "../qore-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tokio-stream = "0.1"
base64 = { workspace = true }
uuid = { workspace = true }
rand = "0.8"
dirs = "5"
