[package]
name = "qore-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Surface-agnostic service layer for QorePlatform — Tauri-free business logic shared by every surface (desktop, CLI, MCP, server)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5"
